# sentry-release-parser

./: .craft.yml  .gitignore  .npmignore  .travis.yml  CHANGELOG.md  Cargo.toml  Makefile  README.md  package.json  parser.test.js  tsconfig.json
.github/workflows/: build.yml  ci.yml  release.yml
scripts/: bump-version.sh
src/: lib.rs  parser.rs  parser.ts
tests/: test_parser.rs  test_semver.rs  test_semver_1.rs  test_serde.rs
tests/snapshots/: test_serde__basic.snap  test_serde__basic_prerelease.snap  test_serde__dashed_numeric_prerelease.snap  test_serde__empty_version.snap  test_serde__four_components.snap  test_serde__hash.snap  test_serde__hash_on_dotted_quad_version.snap  test_serde__hash_on_dotted_two_version.snap  test_serde__implied_prerelease.snap  test_serde__invalid_date_release.snap  test_serde__leading_zeroes.snap  test_serde__mobile.snap  test_serde__mobile_dotted_secondary.snap  test_serde__mobile_three_components.snap  test_serde__not_a_version.snap  test_serde__qualified_hash.snap  test_serde__single_component.snap  test_serde__valid_dotted_release.snap  test_serde__version_only.snap
