[package]
name = "sentry-release-parser"
version = "0.1.0"
authors = ["Armin Ronacher <armin.ronacher@active-4.com>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[dependencies]
regex = { version = "1.3.3", features = ["std"], default-features = false }
lazy_static = "1.4.0"
semver = { version = "0.9.0", optional = true }
