[package]
name = "sentry-release-parser"
description = "A parser for the sentry release name format"
version = "1.0.0"
authors = ["Sentry <hello@sentry.io>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/getsentry/sentry-release-parser"

[package.metadata.docs.rs]
all-features = true

[dependencies]
regex = { version = "1.3.3", features = ["std"], default-features = false }
lazy_static = "1.4.0"
semver = { version = "0.9.0", optional = true }
serde = { version = "1.0.104", optional = true, features = ["derive"] }

[dev-dependencies]
insta = "1.6.0"
similar-asserts = "1.0.0"
